# timext

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  duration.rs  lib.rs
.github/workflows/: build.yaml
duration/: ext.rs  mod.rs  month.rs  rand.rs  serde.rs
duration/extension/: date.rs  mod.rs  numeric.rs
duration/feature/: mod.rs  serde.rs
error/: incomplete.rs  insufficient.rs  mod.rs  range.rs
extension/: calendar.rs  mod.rs  numeric.rs  types.rs
extensions/: date.rs  numeric.rs
feature/: formatting.rs  mod.rs  parsing.rs  rand.rs  serde.rs
features/: rand.rs
incomplete/: date.rs  error.rs  indate.rs  inoffset.rs  inprimitive.rs  intime.rs  mod.rs  offset.rs  primitive.rs  time.rs
time-monat/: Cargo.toml  README.md  duration.rs  extension.rs  extension_test.rs  lib.rs  numeric.rs
time-monat/extensions/: date.rs  mod.rs  numeric.rs
time-monat/features/: mod.rs  rand.rs  serde.rs
