# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "timext"
version = "0.1.1"
edition = "2021"

license = "MIT"
readme = "./README.md"
description = """
The collection of time-rs/time extensions for calendar
arithmetics, incomplete formats handling, imprecise time,
and other things time crate is not intended for.
"""

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/xwde/timext"
homepage = "https://github.com/xwde/timext"
categories = ["date-and-time", "no-std", "parser-implementations", "value-formatting"]
keywords = ["date", "time", "calendar", "duration"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./lib.rs"

[features]
serde = ["dep:serde", "time/serde"]
rand = ["dep:rand", "time/rand"]
formatting = ["time/formatting", "time/macros"]
parsing = ["time/parsing", "time/macros"]

[dependencies]
time = { version = "0.3.19" }
serde = { version = "1.0.152", optional = true, default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false }
